force-app/main/default/objects/Interview_Question__c/fields/Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Creation_Source__c</fullName>
    <label>Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Interview</fullName>
                <default>true</default>
                <label>Before Interview</label>
            </value>
            <value>
                <fullName>During Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>