force-app/main/default/objects/Interview_Question__c/fields/Interview_Question_Topic__c.field-meta.xml
<CustomField>
    <fullName>Interview_Question_Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Question Topic</label>
    <referenceTo>Interview_Question_Topic__c</referenceTo>
    <relationshipLabel>Interview Questions</relationshipLabel>
    <relationshipName>Interview_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>