force-app/main/default/objects/Interview_Question__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process planning (SDLC)</fullName>
            </value>
            <value>
                <fullName>Estimation</fullName>
            </value>
            <value>
                <fullName>Software Requirements Engineering</fullName>
            </value>
            <value>
                <fullName>OOD</fullName>
            </value>
            <value>
                <fullName>DB Design</fullName>
            </value>
            <value>
                <fullName>Algorithms</fullName>
            </value>
            <value>
                <fullName>Salesforce Development Lifecycle</fullName>
            </value>
            <value>
                <fullName>Apex Programming</fullName>
            </value>
            <value>
                <fullName>Salesforce Security Model</fullName>
            </value>
            <value>
                <fullName>Salesforce Objects Models</fullName>
            </value>
            <value>
                <fullName>Automation Business Processes</fullName>
            </value>
            <value>
                <fullName>Salesforce Layouts and Flexipages</fullName>
            </value>
            <value>
                <fullName>Salesforce Lightning</fullName>
            </value>
            <value>
                <fullName>AppExchange &amp; Packages</fullName>
            </value>
            <value>
                <fullName>Platform events</fullName>
            </value>
            <value>
                <fullName>Async tools</fullName>
            </value>
            <value>
                <fullName>Metadata API, SFDX</fullName>
            </value>
            <value>
                <fullName>CSS/CSS3</fullName>
            </value>
            <value>
                <fullName>HTML/HTML5</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>SOQL, SOSL, DML</fullName>
            </value>
            <value>
                <fullName>Code quality</fullName>
            </value>
            <value>
                <fullName>Refactoring</fullName>
            </value>
            <value>
                <fullName>Automated testing</fullName>
            </value>
            <value>
                <fullName>Version Control Systems</fullName>
            </value>
            <value>
                <fullName>Product Builds and Continuous Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>